<resources>
    <string name="app_name">My Application</string>
    <string name="add">Add</string>
    <string name="enter_course">Enter Course</string>
    <string name="enter_author_s">Enter Author(s)</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="enter_title">Enter Title</string>
    <string name="title">Title</string>
    <string name="isbn">ISBN</string>
    <string name="author">Author</string>
    <string name="course">Course</string>
    <string name="edit_button">edit button</string>
    <string name="delete_button">delete button</string>
    <string name="add_textbooks">Add Textbooks</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
</resources>