<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="3dp"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bkTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/bkISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/bkAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/bkCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@null"
                android:src="@drawable/ic_delete_action_foreground"
                android:contentDescription="@string/delete_button" />

            <ImageButton
                android:id="@+id/editBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@null"
                android:src="@drawable/ic_edit_action_foreground"
                android:contentDescription="@string/edit_button" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>